# intv2-convert

./: .gitignore  CMakeLists.txt  README.md  batch_convert.py  make_intv2_from_cfg.py  make_intv2_from_rom.py  release.md
.github/workflows/: ci.yml  release.yml
src/: batch.cpp  batch.hpp  cfg.cpp  gui_main.cpp  lst.cpp  main.cpp  rom.cpp  writer.cpp  writer.hpp
